Fix layout on mobile

--- a/src/app/home/robot-home/robot-home.component.scss
+++ b/src/app/home/robot-home/robot-home.component.scss
@@ -5,7 +5,6 @@ a:link {
 
 .robot-grid-parent {
     display: grid;
-    max-width: 1400px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-column-gap: 10px;
     grid-row-gap: 10px;
@@ -18,6 +17,13 @@ a:link {
         min-width: 900px;
     }
 }
+
+@media (min-width: 1400px) {
+    .robot-grid-parent {
+        max-width: 1400px;
+    }
+}
+
 
 .panel-info {
     text-align: left;
